<resources>
    <string name="app_name">TinyGobang</string>
    <string name="hh_match">人人对弈</string>
    <string name="hm_match">人机对战</string>
    <string name="wifi_match">WiFi对战</string>
    <string name="restart_game">重新开始</string>
    <string name="start_game">开始游戏</string>
    <string name="exit_game">退出游戏</string>
    <string name="regret_game">悔 棋</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_restart">对方请求重新开始游戏</string>
    <string name="waiting_for_restart">等待对方确认重新开始游戏...</string>
    <string name="request_regret">对方请求悔棋</string>
    <string name="waiting_for_regret">等待对方确认悔棋</string>
</resources>
