<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.aty.GameAty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:gravity="left"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:id="@+id/tvVictory"
            />

    <com.example.vampire.tinygobang.view.myView.BoardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_gb_panel"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.example.vampire.tinygobang.util.mdButton.ButtonRectangle
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:id="@+id/btn_regret"
            android:text="@string/regret_game"
            android:layout_marginLeft="15dp"
            />
        <com.example.vampire.tinygobang.util.mdButton.ButtonRectangle
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:id="@+id/btn_start"
            android:text="@string/start_game"
            android:layout_marginLeft="15dp"
            />
        <com.example.vampire.tinygobang.util.mdButton.ButtonRectangle
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:id="@+id/btn_exit"
            android:text="@string/exit_game"
            android:layout_marginLeft="15dp"
            />
    </LinearLayout>

</LinearLayout>
